--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=d3edc888f6e66d8903855e8a87c594bc&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=ec2af092fd73495d177352cbc34294d3&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="ovoshchnye-bul-ony---eto-kontsentrat" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=9c8fa9713ecbf021ac890ce853dbae85&oe=5E9D729C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="sanitayzer-sdelay-sam-xxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AAQmKC9mvDAAX9dXgcl&oh=8fa7696c6c9293de0b54e1ce25f50916&oe=5EA3EDB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=f43813a95d5a57ce12e825cab3361eaf&oe=5E9CD80C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=0a61f9e0401fb7e9835e869eee867190&oe=5EA0CC8C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=a70266315728cd9cfda6a65b61ee0531&oe=5EA8A032" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=6d3f85eaea7b5b9d614fd5363c8304d3&oe=5EA8A032" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=Ac6gBG7pt0YAX9JaWjB&oh=d4a3dcdf664fabfffae0fdcf4f15778e&oe=5EA1D366" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=x3Okc5YFTkgAX8aUZNb&oh=47f0ae729a522e202aa077d4e2f77364&oe=5EA1D366" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=5vw1S56HNnQAX8Kplfg&oh=8f41236b42a07fe84cbea1cf86e3e48e&oe=5E9C58CF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=5vw1S56HNnQAX8Kplfg&oh=8c1781d4312fdc8ce40953e6aaf47811&oe=5EA04D4F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sirop-iz-yagod-buziny" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FP6dNS8c02MAX9Gw_ey&oh=3ab80e29f2e513c52015b3701779cbda&oe=5EA3741A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3KWm8ydBH_kAX_59tFo&oh=5681627c8427285a54aebfb778ce13e3&oe=5EA3741A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ob-osnovnykh-dobavkakhx-aktual-nykh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=50b4dd6f1e8315dc706950673dcff8a4&oe=5E9C98FD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=c35901424654f1712d086764aaae95a9&oe=5EA08D7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=4a68f9616ccd925cb2e2046552ada942&oe=5E9DBED4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=9f418c3b16826fc9ba177f11a1f0e451&oe=5E9D5EAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="melissa-xlemon-balm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pAwckW_zTZQAX_zMEak&oh=01423bd210f28640ffe1b94d4305ffb1&oe=5E9CF429" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pAwckW_zTZQAX_zMEak&oh=b26a9933e91abc599ad323ecaa55bcc8&oe=5EA0CC57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="koshachiy-kogot--xcatxs" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=4b07359d775f7da557f307fffe7c98d2&oe=5EA7B7FA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=e66e1632a9086d873feddcda531698be&oe=5E9F4306" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="davno-obeshchala-napisat-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89376508_3434455293315997_5136329399629063670_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=ldTj-zFEPN4AX9Njiqc&oh=1ef824d5c0e00a90b649bad77d9a35ef&oe=5E9C15BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Давно обещала написать">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89376508_3434455293315997_5136329399629063670_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=smuDwVfWqIUAX-R1nil&oh=83ce4d397cac5cadb158cc0bac3c642f&oe=5EA00A3A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Давно обещала написать">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gde-naytix-zashchitu-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=JkNa6XAhY74AX9il1Rr&oh=a6b6c2f07963bec182f07a9a63218e5e&oe=5EA5DF27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=JkNa6XAhY74AX9il1Rr&oh=ec04bf9d0c0456217931c28a66d2a5ee&oe=5EB30E27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bezzhirovogo-sousa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=oNriFwXw3ZQAX_VeBqh&oh=4cff3b8736956b4f7c177313c027aa74&oe=5EA3BA22" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=slUJlw_2phEAX_LWSUG&oh=820aa68ef2c3513dfc71cb478d69b6ba&oe=5E9F4C5E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8SeFEen5QzAAX8VscIo&oh=d51033869823494b08d39655384d2d30&oe=5EA49860" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8SeFEen5QzAAX8VscIo&oh=7142d52f1ed10385cbdfaffa59425260&oe=5EA49860" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxkurs-praktikum-xkrepkiy-immunitetxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=33FufKMez3sAX9Rh42o&oh=fd89ad542eac78326c4a29c6f6687e36&oe=5EA53E23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=ka3qZKliXZwAX9vJNMy&oh=02936e9b039043ee08e504dddccfdd7a&oe=5EA7A15D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❤️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=33FufKMez3sAX9Rh42o&oh=61b9c151f1c5d279f9e35c015b2f9ba8&oe=5EB26D23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
