--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=d3edc888f6e66d8903855e8a87c594bc&oe=5EA51256" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=ec2af092fd73495d177352cbc34294d3&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -86,74 +86,74 @@
 							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1335</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1341</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=f43813a95d5a57ce12e825cab3361eaf&oe=5E9CD80C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=0a61f9e0401fb7e9835e869eee867190&oe=5EA0CC8C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 							</div>
 							<div class="article-more__item-name">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
 						</a>
 							<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1309</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1312</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=50b4dd6f1e8315dc706950673dcff8a4&oe=5E9C98FD" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=c35901424654f1712d086764aaae95a9&oe=5EA08D7D" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 							</div>
 							<div class="article-more__item-name">ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных</div>
 						</a>
 							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1210</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1214</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=4b07359d775f7da557f307fffe7c98d2&oe=5EA7B7FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=e66e1632a9086d873feddcda531698be&oe=5E9F4306" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
 							</div>
 							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
 						</a>
 							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1170</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1174</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=a70266315728cd9cfda6a65b61ee0531&oe=5EA8A032" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=6d3f85eaea7b5b9d614fd5363c8304d3&oe=5EA8A032" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ</div>
 						</a>
 							<a href="./posts/./gidrastis-xgoldensealx-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>991</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>993</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=Ac6gBG7pt0YAX9JaWjB&oh=d4a3dcdf664fabfffae0fdcf4f15778e&oe=5EA1D366" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=x3Okc5YFTkgAX8aUZNb&oh=47f0ae729a522e202aa077d4e2f77364&oe=5EA1D366" alt="ГИДРАСТИС (Goldenseal) 🌱">
 							</div>
 							<div class="article-more__item-name">ГИДРАСТИС (Goldenseal) 🌱</div>
 						</a>
 							<a href="./posts/./sirop-iz-yagod-buziny.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>987</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>990</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FP6dNS8c02MAX9Gw_ey&oh=3ab80e29f2e513c52015b3701779cbda&oe=5EA3741A" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3KWm8ydBH_kAX_59tFo&oh=5681627c8427285a54aebfb778ce13e3&oe=5EA3741A" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 							</div>
 							<div class="article-more__item-name">СИРОП ИЗ ЯГОД БУЗИНЫ</div>
 						</a>
 							<a href="./posts/./shpinatxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>958</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>962</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=mM0c6qGQqQoAX8GCaRy&oh=419d3746c65ebb87fa3e1c41ae11f1a9&oe=5EA125F6" alt="ШПИНАТ 🌱">
 							</div>
 							<div class="article-more__item-name">ШПИНАТ 🌱</div>
 						</a>
-							<a href="./posts/./luchshie-produkty-dlya-ukrepleniya.html" class="article-more__item">
+							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>869</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>934</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=4a68f9616ccd925cb2e2046552ada942&oe=5E9DBED4" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=9c8fa9713ecbf021ac890ce853dbae85&oe=5E9D729C" alt="Овощные бульоны - это концентрат">
 							</div>
-							<div class="article-more__item-name">ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ</div>
+							<div class="article-more__item-name">Овощные бульоны - это концентрат</div>
 						</a>
 						</div>
 				</div>
