--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=ec2af092fd73495d177352cbc34294d3&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=yDSoXwxrHw0AX9h_R6K&oh=f97c7595e2c89cf800b96d2f14a12375&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -86,7 +86,7 @@
 							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1341</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1345</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=0a61f9e0401fb7e9835e869eee867190&oe=5EA0CC8C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 							</div>
@@ -95,34 +95,34 @@
 							<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1312</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1317</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=c35901424654f1712d086764aaae95a9&oe=5EA08D7D" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=b6pmDEpnVMcAX-Nr0nZ&oh=4fbcd5fcc5c6d2f07c374665bd3e0c75&oe=5EA08D7D" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 							</div>
 							<div class="article-more__item-name">ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных</div>
-						</a>
-							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1214</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=e66e1632a9086d873feddcda531698be&oe=5E9F4306" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
-							</div>
-							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
 						</a>
 							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1174</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1177</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=6d3f85eaea7b5b9d614fd5363c8304d3&oe=5EA8A032" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=da6Uizo779QAX-949-J&oh=d688b0c5ba0101f010f52d5c61547dd9&oe=5EA8A032" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ</div>
+						</a>
+							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1100</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=835bc89b9f9d78d2b7939f662dd81e97&oe=5EA1671C" alt="Овощные бульоны - это концентрат">
+							</div>
+							<div class="article-more__item-name">Овощные бульоны - это концентрат</div>
 						</a>
 							<a href="./posts/./gidrastis-xgoldensealx-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>993</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>995</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=x3Okc5YFTkgAX8aUZNb&oh=47f0ae729a522e202aa077d4e2f77364&oe=5EA1D366" alt="ГИДРАСТИС (Goldenseal) 🌱">
 							</div>
@@ -131,7 +131,7 @@
 							<a href="./posts/./sirop-iz-yagod-buziny.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>990</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>992</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3KWm8ydBH_kAX_59tFo&oh=5681627c8427285a54aebfb778ce13e3&oe=5EA3741A" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 							</div>
@@ -140,20 +140,20 @@
 							<a href="./posts/./shpinatxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>962</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>968</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=mM0c6qGQqQoAX8GCaRy&oh=419d3746c65ebb87fa3e1c41ae11f1a9&oe=5EA125F6" alt="ШПИНАТ 🌱">
 							</div>
 							<div class="article-more__item-name">ШПИНАТ 🌱</div>
 						</a>
-							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
+							<a href="./posts/./luchshie-produkty-dlya-ukrepleniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>934</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>873</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=9c8fa9713ecbf021ac890ce853dbae85&oe=5E9D729C" alt="Овощные бульоны - это концентрат">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=c958d1303193e20bcff9b3146caeeaa0&oe=5EA1532C" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 							</div>
-							<div class="article-more__item-name">Овощные бульоны - это концентрат</div>
+							<div class="article-more__item-name">ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ</div>
 						</a>
 						</div>
 				</div>
