--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=-9doOHB1ArAAX83W-2_&oh=ec2af092fd73495d177352cbc34294d3&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=yDSoXwxrHw0AX9h_R6K&oh=f97c7595e2c89cf800b96d2f14a12375&oe=5EB24156" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="xxchay-iz-romashkix-kornya" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=O4f6Jqi9JLQAX8dPLe9&oh=800dbf4d2d0646ddb6788a263955ea16&oe=5E9FA9C5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="ovoshchnye-bul-ony---eto-kontsentrat" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=9c8fa9713ecbf021ac890ce853dbae85&oe=5E9D729C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=835bc89b9f9d78d2b7939f662dd81e97&oe=5EA1671C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sanitayzer-sdelay-sam-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AAQmKC9mvDAAX9dXgcl&oh=8fa7696c6c9293de0b54e1ce25f50916&oe=5EA3EDB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=fTYjS0pAb5AAX8iAB7D&oh=d7117bb7385d945c3bb46b86779e6df2&oe=5EB11CB5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=-K4clzEqCqoAX-I3oyW&oh=6d3f85eaea7b5b9d614fd5363c8304d3&oe=5EA8A032" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=da6Uizo779QAX-949-J&oh=d688b0c5ba0101f010f52d5c61547dd9&oe=5EA8A032" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ob-osnovnykh-dobavkakhx-aktual-nykh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=FmneJrcxiJMAX-wKENm&oh=c35901424654f1712d086764aaae95a9&oe=5EA08D7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=b6pmDEpnVMcAX-Nr0nZ&oh=4fbcd5fcc5c6d2f07c374665bd3e0c75&oe=5EA08D7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=9f418c3b16826fc9ba177f11a1f0e451&oe=5E9D5EAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=c958d1303193e20bcff9b3146caeeaa0&oe=5EA1532C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="koshachiy-kogot--xcatxs" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=ExlKJla5RcAAX8gB2K1&oh=e66e1632a9086d873feddcda531698be&oe=5E9F4306" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=1dZS6-C2m7MAX_iQfTf&oh=dd0075b711e1df216253a16064a797c1&oe=5E9F4306" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dobavki-dlya-ukrepleniya-immunnoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XoLh5T5PUxMAX9tDS2k&oh=a87803a03125d7e8b3d163bf53ff0df1&oe=5E9E06D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XoLh5T5PUxMAX9tDS2k&oh=673e1cf5732ca6efeeb78be50a44fe17&oe=5EAB35D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gde-naytix-zashchitu-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=JkNa6XAhY74AX9il1Rr&oh=ec04bf9d0c0456217931c28a66d2a5ee&oe=5EB30E27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=jYqw5eU41VcAX_9ACaj&oh=735edcd49a384806d3c88149e970b74e&oe=5EB30E27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8SeFEen5QzAAX8VscIo&oh=7142d52f1ed10385cbdfaffa59425260&oe=5EA49860" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xxkurs-praktikum-xkrepkiy-immunitetxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87648388_224055125417773_8649684401074661984_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=33FufKMez3sAX9Rh42o&oh=61b9c151f1c5d279f9e35c015b2f9ba8&oe=5EB26D23" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍋Курс-практикум “Крепкий иммунитет”🍋">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8SeFEen5QzAAX8VscIo&oh=bf49cf20a09717c42a46941597ea0f7d&oe=5EB1C760" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
