--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="kardamon-xx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=rIJUNTs2QCcAX-8dn75&oh=da61a9e85de37958d82e2f383d2a3af3&oe=5E9FB200" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАРДАМОН ☀️">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xxchay-iz-romashkix-kornya" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=O4f6Jqi9JLQAX8dPLe9&oh=800dbf4d2d0646ddb6788a263955ea16&oe=5E9FA9C5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ovoshchnye-bul-ony---eto-kontsentrat" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=QcVyLRv4ORsAX87JkiT&oh=835bc89b9f9d78d2b7939f662dd81e97&oe=5EA1671C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8rxNUsMzhKgAX-Av208&oh=02f114104115b522e33e00260954c5a4&oe=5EA1671C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=GXP_spS1_rwAX_-U5X6&oh=0a61f9e0401fb7e9835e869eee867190&oe=5EA0CC8C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=FFwmjOpXXpQAX9avwqo&oh=289fd11613457a1dc85bcec3c72746f2&oe=5EA0CC8C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=5vw1S56HNnQAX8Kplfg&oh=8c1781d4312fdc8ce40953e6aaf47811&oe=5EA04D4F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=gVs-csxNJGcAX_2Ojrn&oh=9e2552128bf88ce915834cf97a3f6ac3&oe=5EA04D4F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sirop-iz-yagod-buziny" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3KWm8ydBH_kAX_59tFo&oh=5681627c8427285a54aebfb778ce13e3&oe=5EA3741A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=3KWm8ydBH_kAX_59tFo&oh=495489fe5607fb89fb0d74a575a00d63&oe=5EB0A31A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shpinatxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=mM0c6qGQqQoAX8GCaRy&oh=419d3746c65ebb87fa3e1c41ae11f1a9&oe=5EA125F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=gcwoSXNwUasAX_Hsb0v&oh=c10cf834004baf42cc7292dbba1a9ace&oe=5EA125F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=sx-9MMnKZ_8AX81VmT9&oh=c958d1303193e20bcff9b3146caeeaa0&oe=5EA1532C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=F8zGaRF5SgEAX-h27-U&oh=09d30807bc7449cfe0efc9b65d48ef2d&oe=5EA1532C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="melissa-xlemon-balm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=pAwckW_zTZQAX_zMEak&oh=b26a9933e91abc599ad323ecaa55bcc8&oe=5EA0CC57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=zQH5TuLnIJIAX8y34V3&oh=a31310b191873b9fc37bc9e3c2681de5&oe=5EA0CC57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="koshachiy-kogot--xcatxs" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=1dZS6-C2m7MAX_iQfTf&oh=dd0075b711e1df216253a16064a797c1&oe=5E9F4306" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=1dZS6-C2m7MAX_iQfTf&oh=082dcbab75ab384745d9b5c2ead46504&oe=5EA33786" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dobavki-dlya-ukrepleniya-immunnoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=XoLh5T5PUxMAX9tDS2k&oh=673e1cf5732ca6efeeb78be50a44fe17&oe=5EAB35D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=y8cCJGECIykAX_D-wl8&oh=11438f24dec30b2102ea41026a58c5c7&oe=5EAB35D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bezzhirovogo-sousa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=slUJlw_2phEAX_LWSUG&oh=820aa68ef2c3513dfc71cb478d69b6ba&oe=5E9F4C5E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="lekarstvo-nomer-1---chesnok" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=8SeFEen5QzAAX8VscIo&oh=bf49cf20a09717c42a46941597ea0f7d&oe=5EB1C760" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=slUJlw_2phEAX_LWSUG&oh=412d73def823e88ca2f28d15acdddc64&oe=5EA340DE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
